<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.tinkoffwatcher.data.OrderType" />

        <variable
            name="position"
            type="com.example.tinkoffwatcher.data.PositionSettings" />

        <variable
            name="viewmodel"
            type="com.example.tinkoffwatcher.viewmodels.PositionSettingsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="20dp"
        tools:context=".ui.positions.PositionSettingsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/position_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:setTinkoffPosition="@{position.position}" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/nunito"
                android:text="@{position.position.name}"
                android:textAlignment="center"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="34sp"
                app:autoSizeMinTextSize="25sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/trailStopLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:hint="@string/trail_stop_activation_price_text"
                    app:hintTextAppearance="@style/HintStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/trailStopValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{text -> viewmodel.onTrailStopPriceChanged(text)}"
                        android:digits="0123456789."
                        android:fontFamily="@font/nunito"
                        android:inputType="numberSigned|numberDecimal"
                        android:text="@{String.valueOf(position.activationPrice)}"
                        android:textAlignment="center" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/stopLossLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:hint="@string/stop_loss_text"
                    app:hintTextAppearance="@style/HintStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/stopLossValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{text -> viewmodel.onStopLossPercentChanged(text)}"
                        android:digits="0123456789."
                        android:fontFamily="@font/nunito"
                        android:inputType="numberSigned|numberDecimal"
                        android:text="@{String.valueOf(position.stopLossPercent)}"
                        android:textAlignment="center" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/orderTypeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:fontFamily="@font/nunito"
                        android:text="@string/close_position_by"
                        app:autoSizeMaxTextSize="40sp"
                        app:autoSizeMinTextSize="6sp"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="@{viewmodel.orderType == OrderType.Limit}"
                            android:hint="@string/limit_order_type"
                            android:onClick="@{() -> viewmodel.onOrderTypeChanged(OrderType.Limit)}"
                            android:textSize="16sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="@{viewmodel.orderType == OrderType.Market}"
                            android:hint="@string/market_order_type"
                            android:onClick="@{() -> viewmodel.onOrderTypeChanged(OrderType.Market)}"
                            android:textSize="16sp" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/enableTrailStopTitle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:fontFamily="@font/nunito"
                        android:text="@string/enable_trail_stop_text"
                        app:autoSizeMaxTextSize="40sp"
                        app:autoSizeMinTextSize="6sp"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/trailStopCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewmodel.trailStopEnabled}"
                        android:gravity="center"
                        android:minWidth="0dp"
                        android:minHeight="0dp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>